--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ded2d589",
+   "id": "5eb5ee0f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bdf36986",
+   "id": "ad0ee968",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e085eb16",
+   "id": "e4823c70",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91af1004",
+   "id": "b75b116b",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a7beae3f",
+   "id": "2ffbe85b",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5c94aadf",
+   "id": "1d0b78c5",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dd5b4779",
+   "id": "067d2121",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4caaaaf4",
+   "id": "68d850cd",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0a8929fd",
+   "id": "cac3adac",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "94b843ca",
+   "id": "4d21ab42",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b2090fa3",
+   "id": "7e3a130a",
    "metadata": {},
    "outputs": [
     {
@@ -212,8 +212,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "984712a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: asd\n",
+      "Enter second word: \n",
+      "Your second string is empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can use \"and\" or \"or\" to check for the empty string\n",
+    "\n",
+    "first = input('Enter first word: ')\n",
+    "second = input('Enter second word: ')\n",
+    "\n",
+    "if first == '' or second == '':\n",
+    "    if first == '':\n",
+    "        print(f'Your first string is empty')\n",
+    "    if second == '':\n",
+    "        print(f'Your second string is empty')\n",
+    "elif first < second:  \n",
+    "    print(f'{first} comes before {second}')\n",
+    "elif first == second:\n",
+    "    print(f'{first} and {second} are the same!')\n",
+    "else:  # implicitly, this is >\n",
+    "    print(f'{second} comes before {first}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e044cc43",
+   "id": "4801999b",
    "metadata": {},
    "outputs": [],
    "source": []
