--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89bcdd6b",
+   "id": "82ba99bc",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e3489f4",
+   "id": "8d490b13",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8ad31ae4",
+   "id": "df2927c2",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dca6a51e",
+   "id": "b5452710",
    "metadata": {},
    "outputs": [
     {
@@ -84,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7e75ac9d",
+   "execution_count": 29,
+   "id": "2699edeb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a 1st name: chicken\n",
-      "Enter a 2nd name: chicken\n",
-      "duplicate words, check again\n"
+      "Enter a 1st name: ahmed\n",
+      "Enter a 2nd name: habib\n",
+      "ahmed comes first\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a0ee0e",
+   "id": "7467a77d",
    "metadata": {},
    "outputs": [],
    "source": []
