--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba749311",
+   "id": "c23edb0c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7503763",
+   "id": "a2146f5e",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4a7cd7",
+   "id": "cd948cb2",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f86ffcc",
+   "id": "e69e6a9a",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b279b5",
+   "id": "0552f44b",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436e7133",
+   "id": "cac365f2",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b4f6c21",
+   "id": "015626aa",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3bc981f2",
+   "id": "68946699",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4e20f0d4",
+   "id": "ed4a76c5",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e234dc78",
+   "id": "60f8cbb5",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "04dfda1d",
+   "id": "265acdd9",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6d2583ec",
+   "id": "77ce5ab7",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1fd39e10",
+   "id": "731b92b5",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d6fa75bd",
+   "id": "ab8ddd8f",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d60f4d",
+   "id": "5ea4986a",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2ed6d21d",
+   "id": "aad4d04b",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e801e3df",
+   "id": "b1a22361",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "44b7d1b2",
+   "id": "b66113c3",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "03d1ea56",
+   "id": "4f83f503",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e9c21f2",
+   "id": "e5ac5751",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e893d8b0",
+   "id": "217f4a80",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eaf9060c",
+   "id": "5d804fad",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0b456061",
+   "id": "068016fd",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4278ec03",
+   "id": "3f58d22d",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ef6a9f",
+   "id": "3666558a",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "05b2bab0",
+   "id": "10a80f41",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31794a19",
+   "id": "76b04cb4",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c6df3a3c",
+   "id": "b800b1a5",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00015c2f",
+   "id": "a9390e34",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0979b171",
+   "id": "85bd72d0",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4110054f",
+   "id": "386c8a6e",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ab44fac2",
+   "id": "749518a3",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "133ff3e4",
+   "id": "ee607fd7",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725cefc4",
+   "id": "3f2a3a94",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c08bf6cb",
+   "id": "e30cafbd",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e67b1784",
+   "id": "68e5e88d",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "85f73fdc",
+   "id": "fa3e4d20",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7cf7fb3d",
+   "id": "447915ee",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a09893f1",
+   "id": "4a6a1c89",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e7dd4d31",
+   "id": "5d5196c3",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b6c524f5",
+   "id": "664237eb",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "914b648c",
+   "id": "12dfe862",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6d55440c",
+   "id": "126c8bb2",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "23fc04b9",
+   "id": "dd8e89cb",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1f0a8ecd",
+   "id": "23250480",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "def40fe7",
+   "id": "ceb446c0",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7a097080",
+   "id": "3df443e2",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8834b9eb",
+   "id": "712dd2a2",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f2253fae",
+   "id": "cdf6e5c6",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a53f5414",
+   "id": "2eb4f95e",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3fc29124",
+   "id": "01ddcdd2",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b07d9c52",
+   "id": "74e5120a",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7948da51",
+   "id": "24414a2f",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ac798c",
+   "id": "0083766d",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "9b9ad50e",
+   "id": "44b398dd",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7061fae9",
+   "id": "e9c630eb",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81a0bb8",
+   "id": "5471fbe0",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "939e9347",
+   "id": "c39e5db6",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de390474",
+   "id": "832b2996",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "93f0e072",
+   "id": "4f081da8",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0f1e331",
+   "id": "e167a139",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f66a155",
+   "id": "a2df211c",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d649d163",
+   "id": "3f1cdae6",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0e243053",
+   "id": "e47f0b0a",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d371de46",
+   "id": "11a01066",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "600ea78b",
+   "id": "fa3ee2d6",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "74e27d2e",
+   "id": "57cda077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "365a4c23",
+   "id": "bb77a29e",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e8e74da7",
+   "id": "5f7629f4",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "3f7c5e7c",
+   "id": "479b56c9",
    "metadata": {},
    "outputs": [
     {
@@ -1472,12 +1472,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f02a79a5",
+   "cell_type": "markdown",
+   "id": "eab60903",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Name and company\n",
+    "\n",
+    "1. Ask the user to enter their name, and assign to `name`.\n",
+    "2. Ask the user to enter their company, and assign to `company`.\n",
+    "3. Give one of four responses:\n",
+    "    - If the name and company match yours, then say \"You're me!\"\n",
+    "    - If the name is the same, but the company isn't, compliment their name\n",
+    "    - If the company is the same, but the name is different, greet your colleague\n",
+    "    - If neither is the same, give a snarky greeting.\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
