--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8ade2275",
+   "id": "3528ba34",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e40a9102",
+   "id": "977e2efe",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6ca0dbf1",
+   "id": "22704b01",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "91fb852c",
+   "id": "538a2e3f",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60c9745f",
+   "id": "e4add151",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "017dc4ab",
+   "id": "65cb7247",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eec9bdd8",
+   "id": "4cb70e24",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7de2796e",
+   "id": "969d890a",
    "metadata": {},
    "outputs": [
     {
@@ -178,10 +178,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231a918b",
+   "id": "4f4bdf2b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input(\"Please enter a name: \")\n",
+    "company = input(\"Please enter your company: \")\n",
+    "\n",
+    "if name"
+   ]
   }
  ],
  "metadata": {
