--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a09c7138",
+   "id": "aa369ec8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5469b3a",
+   "id": "c46886b2",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5c55ce8a",
+   "id": "82944865",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab56277",
+   "id": "c61ccb23",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "29a64ae4",
+   "id": "9c967d72",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ef9c6977",
+   "id": "18678ff8",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2862c175",
+   "id": "1ac13973",
    "metadata": {},
    "outputs": [
     {
@@ -137,15 +137,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f96021f",
+   "id": "d3c72843",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('enter your name :')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca288fff",
+   "id": "076aea20",
    "metadata": {},
    "outputs": [],
    "source": []
