--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4eccde71",
+   "id": "6dc581a3",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b40af761",
+   "id": "31c38424",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7c7ba811",
+   "id": "c7c482a0",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1ac3c488",
+   "id": "71f5dd66",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fe5d19c7",
+   "id": "38feaadf",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6c2c96e6",
+   "id": "618223e0",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4dc80e7b",
+   "id": "b1648caa",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4ba8c552",
+   "id": "9eecc3dc",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "121ccae2",
+   "id": "d92f3613",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "29781e5c",
+   "id": "972ecdda",
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +230,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0187ebc",
+   "id": "494a7fb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name= input(\"Enter ryour name: \")\n",
+    "Comp"
+   ]
   }
  ],
  "metadata": {
