--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,10 +310,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b87c76c0",
+   "id": "b9827d05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input(Enter )"
+   ]
   }
  ],
  "metadata": {
