--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95c1a3e9",
+   "id": "e7953a0c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fc6261c9",
+   "id": "8734da08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4502bf7f",
+   "id": "181d0e0a",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0426a65",
+   "id": "42ab5b20",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "738d8855",
+   "id": "29f107e6",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b63482b",
+   "id": "f6774259",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3949e490",
+   "id": "8d20418a",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "feaaa182",
+   "id": "d811262c",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e6c78e34",
+   "id": "69bca744",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3d909d7f",
+   "id": "99f4a0bf",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f8993c27",
+   "id": "10ef261d",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ca8fcf94",
+   "id": "2b5eec56",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "46b5b5ec",
+   "id": "0652fa09",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2a27161b",
+   "id": "aaf4824d",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7d8dee8c",
+   "id": "fb2a1c59",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "87d0336c",
+   "id": "b4c8953d",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ba87531b",
+   "id": "db0f25a2",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "40b1f6f2",
+   "id": "0e3e307b",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e3c612dc",
+   "id": "1955c6be",
    "metadata": {},
    "outputs": [
     {
@@ -388,10 +388,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2cf3219",
+   "id": "9294fa0b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('What is your name? ')\n",
+    "company = input('What company do you work for? ')\n",
+    "if name=:\n",
+    "    print(f'{word1} comes first')\n",
+    "elif word1==word2: \n",
+    "    print('These are the same. Would you like to compare diffrent words?')\n",
+    "else:\n",
+    "    print(f'{word2} comes first')"
+   ]
   }
  ],
  "metadata": {
