--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82ba99bc",
+   "id": "a12bfc39",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8d490b13",
+   "id": "9fbd161e",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "df2927c2",
+   "id": "64f121ee",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b5452710",
+   "id": "2d6046e1",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2699edeb",
+   "id": "15322ba6",
    "metadata": {},
    "outputs": [
     {
@@ -112,10 +112,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7467a77d",
+   "id": "77475536",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name= input ('Enter a name: ')\n",
+    "Company= input ('Enter a company name: ')\n",
+    "if name==ahmed > name2:\n",
+    "    print(f'{name2} comes first')\n",
+    "elif name1 == name2:\n",
+    "    print ('duplicate words, check again')\n",
+    "else: \n",
+    "    print (f'{name1} comes first')"
+   ]
   }
  ],
  "metadata": {
