--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -113,12 +113,16 @@
    "id": "62a90e07",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test of the \"if\" functionality\n",
+    "name = input('Enter your name: ')\n",
+    "company = input('Enter your company: ')\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3df5798b",
+   "id": "2f770a8c",
    "metadata": {},
    "outputs": [],
    "source": []
