--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c27f48",
+   "id": "f5415798",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2ef45122",
+   "id": "7827bca9",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5e3b2055",
+   "id": "59a057e6",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "296e3505",
+   "id": "b1e6be4e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bea3ca1b",
+   "id": "be0393c6",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d2370315",
+   "id": "a9e7c26b",
    "metadata": {
     "scrolled": true
    },
@@ -191,15 +191,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b51c2c7b",
+   "id": "74618314",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name= input('what is your name: ')\n",
+    "company=input('Where do you work: ')\n",
+    "if name == 'Asma' and company == 'Cisco':\n",
+    "    print('You are me!')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d764b6b",
+   "id": "ccfde869",
    "metadata": {},
    "outputs": [],
    "source": []
