--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3528ba34",
+   "id": "6bc984b6",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "977e2efe",
+   "id": "15ba50b6",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22704b01",
+   "id": "dd8aec98",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "538a2e3f",
+   "id": "d5e7b0b0",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e4add151",
+   "id": "d0a18319",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "65cb7247",
+   "id": "ca41e9e6",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4cb70e24",
+   "id": "09ce5fdb",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "969d890a",
+   "id": "bd521ed6",
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +178,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f4bdf2b",
+   "id": "f32f452e",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input(\"Please enter a name: \")\n",
     "company = input(\"Please enter your company: \")\n",
     "\n",
-    "if name"
+    "if name == \"Joe\" and company == \"Cisco\":\n",
+    "    print(\"Hey it's me!\")\n",
+    "elif name == \"Joe\" and company != \"Cisco\":\n",
+    "    print(\"Nice name!\")\n",
+    "elif name !=\"Joe\" and company ==\"Cisco\"\n",
+    "pr"
    ]
   }
  ],
