--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5eb5ee0f",
+   "id": "afa6545c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ad0ee968",
+   "id": "fda23561",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4823c70",
+   "id": "5a53db95",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75b116b",
+   "id": "8550d121",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ffbe85b",
+   "id": "2eb06e5f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1d0b78c5",
+   "id": "415d145e",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "067d2121",
+   "id": "6b84cdc6",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68d850cd",
+   "id": "45a65f48",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cac3adac",
+   "id": "72f295fe",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4d21ab42",
+   "id": "4423b4a1",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7e3a130a",
+   "id": "e944daf2",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "984712a7",
+   "id": "5d6a1cf7",
    "metadata": {},
    "outputs": [
     {
@@ -247,8 +247,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "11f57a5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (1409033940.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[29], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name='Matt' and com'Cisco':\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name')\n",
+    "com = input('Enter your comany name')\n",
+    "\n",
+    "if name='Matt' and com'Cisco':\n",
+    "    print('match!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4801999b",
+   "id": "d528d40c",
    "metadata": {},
    "outputs": [],
    "source": []
