--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aa369ec8",
+   "id": "a2abc267",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c46886b2",
+   "id": "132bc81c",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "82944865",
+   "id": "f2797cde",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c61ccb23",
+   "id": "bce56446",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9c967d72",
+   "id": "d5b1c085",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18678ff8",
+   "id": "b75da99e",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1ac13973",
+   "id": "30258f71",
    "metadata": {},
    "outputs": [
     {
@@ -137,17 +137,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c72843",
+   "id": "8dca0b49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input('enter your name :')"
+    "name = input('Enter your name : ')\n",
+    "company = input('Enter your company : ')\n",
+    "if name == '' :\n",
+    "    print(\"you haven't provided your name !!\")\n",
+    "elif copmany == "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "076aea20",
+   "id": "aace960e",
    "metadata": {},
    "outputs": [],
    "source": []
