--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e7953a0c",
+   "id": "371a279d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8734da08",
+   "id": "a8716a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "181d0e0a",
+   "id": "9285ee21",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "42ab5b20",
+   "id": "3fe94208",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "29f107e6",
+   "id": "c226cbc0",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6774259",
+   "id": "703957b3",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8d20418a",
+   "id": "daeee0e6",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d811262c",
+   "id": "92a8fbb1",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "69bca744",
+   "id": "cc7df21c",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "99f4a0bf",
+   "id": "38dae734",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "10ef261d",
+   "id": "bb7cacc0",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2b5eec56",
+   "id": "ac2a4c06",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0652fa09",
+   "id": "5307438a",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aaf4824d",
+   "id": "32fd9046",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fb2a1c59",
+   "id": "b17f2f45",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b4c8953d",
+   "id": "0e4d419f",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "db0f25a2",
+   "id": "415b5972",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0e3e307b",
+   "id": "19933e96",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1955c6be",
+   "id": "a53cff10",
    "metadata": {},
    "outputs": [
     {
@@ -387,19 +387,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "21719aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (3947056346.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[31], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name='Sara':\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('What is your name? ')\n",
+    "company = input('What company do you work for? ')\n",
+    "if name='Sara':\n",
+    "    print(f 'Hi, {Sara}')\n",
+    "elif word1==word2: \n",
+    "    print('These are the same. Would you like to compare diffrent words?')\n",
+    "else:\n",
+    "    print(f'{word2} comes first')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9294fa0b",
+   "id": "888f4aad",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('What is your name? ')\n",
     "company = input('What company do you work for? ')\n",
-    "if name=:\n",
-    "    print(f'{word1} comes first')\n",
-    "elif word1==word2: \n",
-    "    print('These are the same. Would you like to compare diffrent words?')\n",
+    "if name=='Sara':\n",
+    "    print(f 'Hi, {Sara}')\n",
+    "elif company=='Cisco': \n",
+    "    print('Hi, we are collegues!)\n",
     "else:\n",
-    "    print(f'{word2} comes first')"
+    "    print(f'Oh, you?')"
    ]
   }
  ],
