--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6dc581a3",
+   "id": "aed6aae4",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "31c38424",
+   "id": "d3e53ed8",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7c482a0",
+   "id": "4caa3988",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "71f5dd66",
+   "id": "886da57c",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "38feaadf",
+   "id": "c4c9212c",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "618223e0",
+   "id": "e19b1f6e",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b1648caa",
+   "id": "31170563",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9eecc3dc",
+   "id": "b8d8c979",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d92f3613",
+   "id": "56f4c0a2",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "972ecdda",
+   "id": "e9f19693",
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +230,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494a7fb3",
+   "id": "4b340e59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: \n"
+     ]
+    }
+   ],
+   "source": [
+    "name= input(\"Enter your name: \")\n",
+    "company= input(\"Enter the name of the Company: \")\n",
+    "\n",
+    "if name == company:\n",
+    "    print(\"you are me\")\n",
+    "ifel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c747176a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name= input(\"Enter ryour name: \")\n",
-    "Comp"
-   ]
+   "source": []
   }
  ],
  "metadata": {
