--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,11 +310,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9827d05",
+   "id": "2cca586f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input(Enter )"
+    "name = input('Enter user name: ')\n",
+    "company = input('Enter company name: ')\n",
+    "if name == "
    ]
   }
  ],
