--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a12bfc39",
+   "id": "812d56d1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9fbd161e",
+   "id": "a4c53cd6",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "64f121ee",
+   "id": "bbd1a141",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2d6046e1",
+   "id": "9cc3afe0",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "15322ba6",
+   "id": "e9faa467",
    "metadata": {},
    "outputs": [
     {
@@ -112,15 +112,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77475536",
+   "id": "76e639ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "name= input ('Enter a name: ')\n",
     "Company= input ('Enter a company name: ')\n",
-    "if name==ahmed > name2:\n",
-    "    print(f'{name2} comes first')\n",
-    "elif name1 == name2:\n",
+    "if name==ahmed and company==cisco :\n",
+    "    print('you're me!)\n",
+    "elif name == name2:\n",
     "    print ('duplicate words, check again')\n",
     "else: \n",
     "    print (f'{name1} comes first')"
