--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -116,13 +116,16 @@
    "source": [
     "# test of the \"if\" functionality\n",
     "name = input('Enter your name: ')\n",
-    "company = input('Enter your company: ')\n"
+    "company = input('Enter your company: ')\n",
+    "if name == Dima and company == cisco\n",
+    "    print ('You are me!')\n",
+    "elif name == Dima and company "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f770a8c",
+   "id": "ba289605",
    "metadata": {},
    "outputs": [],
    "source": []
