--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5415798",
+   "id": "4fb3bb4d",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7827bca9",
+   "id": "f7b16297",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "59a057e6",
+   "id": "f35df284",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b1e6be4e",
+   "id": "5f7ff413",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "be0393c6",
+   "id": "c7111880",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a9e7c26b",
+   "id": "0960f81b",
    "metadata": {
     "scrolled": true
    },
@@ -191,20 +191,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74618314",
+   "id": "6ec00403",
    "metadata": {},
    "outputs": [],
    "source": [
     "name= input('what is your name: ')\n",
     "company=input('Where do you work: ')\n",
     "if name == 'Asma' and company == 'Cisco':\n",
-    "    print('You are me!')"
+    "    print('You are me!')\n",
+    "elif name == 'Asma':\n",
+    "    if company != 'Cisco'\n",
+    "    print('Nice name!')\n",
+    "elif"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccfde869",
+   "id": "8d4a2374",
    "metadata": {},
    "outputs": [],
    "source": []
