--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "afa6545c",
+   "id": "45980d1f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fda23561",
+   "id": "c0fb24c0",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a53db95",
+   "id": "80a0c380",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8550d121",
+   "id": "086b8f96",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2eb06e5f",
+   "id": "c2203fef",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "415d145e",
+   "id": "81ae6dec",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b84cdc6",
+   "id": "70220a53",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "45a65f48",
+   "id": "135aeee3",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "72f295fe",
+   "id": "d0d33205",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4423b4a1",
+   "id": "03714ac1",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e944daf2",
+   "id": "9841b29a",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5d6a1cf7",
+   "id": "3be04f3e",
    "metadata": {},
    "outputs": [
     {
@@ -247,31 +247,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "11f57a5d",
+   "execution_count": 34,
+   "id": "ee0b8bc5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (1409033940.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[29], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name='Matt' and com'Cisco':\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameMatt\n",
+      "Enter your comany nameCisco\n",
+      "You're me!\n"
      ]
     }
    ],
    "source": [
+    "myn = \"Matt\"\n",
+    "m\n",
     "name = input('Enter your name')\n",
     "com = input('Enter your comany name')\n",
     "\n",
-    "if name='Matt' and com'Cisco':\n",
-    "    print('match!')"
+    "if name=='Matt' and com=='Cisco':\n",
+    "    print('You\\'re me!')\n",
+    "elif if"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d528d40c",
+   "id": "d5328b73",
    "metadata": {},
    "outputs": [],
    "source": []
