--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6bc984b6",
+   "id": "b0bd5335",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15ba50b6",
+   "id": "fa72bc18",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dd8aec98",
+   "id": "68d110f0",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5e7b0b0",
+   "id": "29e0ce3a",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d0a18319",
+   "id": "d36312be",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ca41e9e6",
+   "id": "6e7371e8",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "09ce5fdb",
+   "id": "37209949",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bd521ed6",
+   "id": "019a1091",
    "metadata": {},
    "outputs": [
     {
@@ -177,21 +177,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f32f452e",
+   "execution_count": 29,
+   "id": "d317067c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a name: joe\n",
+      "Please enter your company: cisco\n",
+      "You aint cool\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Please enter a name: \")\n",
     "company = input(\"Please enter your company: \")\n",
     "\n",
-    "if name == \"Joe\" and company == \"Cisco\":\n",
+    "if name.lower == \"Joe\" and company == \"Cisco\":\n",
     "    print(\"Hey it's me!\")\n",
     "elif name == \"Joe\" and company != \"Cisco\":\n",
     "    print(\"Nice name!\")\n",
-    "elif name !=\"Joe\" and company ==\"Cisco\"\n",
-    "pr"
+    "elif name !=\"Joe\" and company ==\"Cisco\":\n",
+    "    print(\"Hey colleague!\")\n",
+    "else:\n",
+    "    print(\"You aint cool\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d9cb60b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
