--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2abc267",
+   "id": "3a9f3ce7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "132bc81c",
+   "id": "9687ad67",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f2797cde",
+   "id": "1dce43a0",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce56446",
+   "id": "13696cb0",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5b1c085",
+   "id": "02ad9722",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b75da99e",
+   "id": "4e2b2347",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "30258f71",
+   "id": "76682391",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dca0b49",
+   "id": "1e5ab33c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,13 +145,17 @@
     "company = input('Enter your company : ')\n",
     "if name == '' :\n",
     "    print(\"you haven't provided your name !!\")\n",
-    "elif copmany == "
+    "elif copmany == '' :\n",
+    "    print(\"you haven't provided your company !!\")\n",
+    "elif name == 'Przem' and company == 'Cisco' :\n",
+    "    print(\"you claim to be me :)  !!\")\n",
+    "elif "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aace960e",
+   "id": "74329c6d",
    "metadata": {},
    "outputs": [],
    "source": []
